<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HigherLowerActivity">

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IvDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/equalsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro"
        app:srcCompat="@drawable/dice1" />

    <TextView
        android:id="@+id/infoThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_throw"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/IvDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/lowerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equalsButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/equalsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/higherButton"
        app:layout_constraintStart_toEndOf="@+id/lowerButton"
        tools:layout_editor_absoluteX="162dp" />

    <Button
        android:id="@+id/higherButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/higher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/equalsButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>